fix navbar, searchbox padding, add a hamburger menu

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,7 +9,7 @@
 body {
   background-color: #fff;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   color: #888;
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -19,8 +19,23 @@ body {
 
 nav {
   background-color: #383838;
-  overflow: hidden;
   width: 100%;
+}
+
+nav .my-left img {
+  height: 30px;
+  margin-left: 20px;
+  margin-top: 6px;
+  width: 30px;
+}
+
+nav .my-left span:nth-child(n + 2) {
+  display: none;
+}
+
+nav .my-left .burger {
+  margin-top: 10px;
+  margin-right: 20px;
 }
 
 nav .my-left button {
@@ -42,10 +57,17 @@ nav .right {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
-
+  nav .my-left span:nth-child(n + 2) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  nav .my-left .burger {
+    display: none;
+  }
   nav .my-left button {
     background-color: #d35266;
     border: 0;
@@ -56,10 +78,16 @@ nav .right {
     font-weight: bold;
     line-height: 2em;
     margin-top: 10px;
+    margin-bottom: 10px;
     text-transform: uppercase;
   }
-
   nav .right {
+    display: none;
+  }
+}
+
+@media (max-width: 523px) {
+  nav .my-left button {
     display: none;
   }
 }
@@ -70,15 +98,13 @@ nav .right {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 0 20px;
   }
-
   nav .my-left span {
     margin-right: 20px;
   }
-
   nav .right {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -86,14 +112,12 @@ nav .right {
     margin-right: 20px;
     padding-top: 15px;
   }
-
   nav .right a {
     color: #888;
     font-size: 18px;
     line-height: 1em;
     text-transform: uppercase;
   }
-
   nav .right a i {
     margin: 0 10px;
   }
@@ -101,8 +125,8 @@ nav .right {
 
 .hero {
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #d35266;
   color: #fff;
   display: -webkit-box;
@@ -110,14 +134,14 @@ nav .right {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding-bottom: 30px;
   padding-top: 30px;
 }
 
 .hero h1 {
-  font-size: 60px;
+  font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -129,13 +153,13 @@ nav .right {
 .hero form select {
   background-color: #fff;
   border: 0;
-  padding: 17px 10px;
+  padding: 12px 10px;
   width: 25%;
 }
 
 .hero form input {
   border: 0;
-  padding: 15px 10px;
+  padding: 10px 10px;
   width: 25%;
 }
 
@@ -184,8 +208,8 @@ nav .right {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .electronics .title h2 {
@@ -220,8 +244,8 @@ footer {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 100%;
   padding: 50px;
 }
@@ -231,12 +255,12 @@ footer .foot-left {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 footer .foot-left img {
-  width: 100%;
+  width: 70%;
 }
 
 footer .foot-left li {
@@ -272,10 +296,9 @@ footer .foot-right img {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   footer .foot-right img {
     margin-bottom: 30px;
   }
@@ -288,48 +311,41 @@ footer .foot-right img {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   footer .foot-left {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   footer .foot-left img {
     display: none;
   }
-
   footer .foot-left ul {
     -webkit-padding-start: 0;
-    padding-inline-start: 0;
+            padding-inline-start: 0;
   }
-
   footer .foot-left ul li {
     margin-left: 0;
   }
-
   footer .foot-left .cats h2 {
     margin-left: 0;
   }
-
   footer .foot-right {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin-top: 20px;
   }
-
   footer .foot-right img {
     margin-left: 0;
     margin-right: 20px;
@@ -346,8 +362,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .search .sc1 {
@@ -359,8 +375,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 20px;
 }
 
@@ -406,8 +422,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .search .result .first {
@@ -419,8 +435,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .search .result .last .pd {
@@ -440,8 +456,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .search .bts button {
@@ -462,16 +478,15 @@ footer .foot-right img {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   .search .sc1 {
     display: none;
   }
-
   .search .sc2 {
     border: 0;
     width: 100%;
   }
 }
+/*# sourceMappingURL=app.css.map */
